<resources>
    <string name="app_name">Fretae</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="acao_criar_conta">Criar conta</string>
    <string name="acao_criar">Criar</string>
    <string name="edittext_senha">Senha</string>
    <string name="edittext_repetir_senha">Repetir senha</string>
    <string name="title_activity_criar_conta">Criar Conta</string>
</resources>
